--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# IntellijIdea files
+*.iml
+.idea
+out
+
 # Distribution / packaging
-.idea/
 .Python
 build/
 develop-eggs/
